6.4/api/Files/Parameters_8h.md
---
title: Libs/Project/Parameters.h

---

# Libs/Project/Parameters.h



## Namespaces

| Name           |
| -------------- |
| **[shapeworks](../Namespaces/namespaceshapeworks.md)** <br>User usage reporting (telemetry)  |

## Classes

|                | Name           |
| -------------- | -------------- |
| class | **[shapeworks::Parameters](../Classes/classshapeworks_1_1Parameters.md)** <br>Parameter settings.  |




## Source code

```cpp
#pragma once

#include "ProjectUtils.h"

#include "Variant.h"

namespace shapeworks {


class Parameters {
  using StringMap = project::types::StringMap;

 public:
  static constexpr const char* ANALYSIS_PARAMS = "analysis";
  static constexpr const char* GROOM_PARAMS = "groom";
  static constexpr const char* OPTIMIZE_PARAMS = "optimize";
  static constexpr const char* STUDIO_PARAMS = "studio";
  static constexpr const char* PROJECT_PARAMS = "project";
  static constexpr const char* DEEPSSM_PARAMS = "deepssm";

  Parameters();

  explicit Parameters(StringMap map);

  Variant get(std::string key, Variant default_value);

  bool key_exists(std::string key);

  void set(std::string key, Variant value);

  void remove_entry(std::string key);

  void set_map(StringMap map);

  StringMap get_map();

  void reset_parameters();

 private:
  StringMap map_;

  //  std::vector< std::pair<const std::string, std::string> >  container_;
  // std::pair<const std::string, std::string>  container_;
  //const std::string joke_;
  tsl::ordered_map<std::string,std::string> mappy_;
};
}  // namespace shapeworks
```


-------------------------------

Updated on 2023-03-27 at 17:59:08 +0000
